fix: 完善scrollbar 组件

--- a/packages/@core/ui-kit/shadcn-ui/src/components/scrollbar/scrollbar.module.css
+++ b/packages/@core/ui-kit/shadcn-ui/src/components/scrollbar/scrollbar.module.css
@@ -1,4 +1,6 @@
 .sc-scrollbar {
+  --scroll-shadow: var(--sidebar);
+
   &:not(.both-shadow).left-shadow {
     mask-image: linear-gradient(90deg, transparent, #000 16px);
   }
